// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть корректный компонент, если regions = [] 1`] = `
<Modal
  animation={true}
  className="DeliverySettings__modal"
  closer={true}
  contentBodyClassName="DeliverySettings__contentBody"
  contentClassName="DeliverySettings__content"
  contentRelativeClassName="DeliverySettings__contentRelative"
  contentWrapperClassName="DeliverySettings__contentWrapper"
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="DeliverySettings"
  >
    <div
      className="DeliverySettings__image"
    >
      <img
        alt="Доставка"
        src={
          Object {
            "default": "picture-of-cat",
          }
        }
      />
    </div>
    <div
      className="DeliverySettings__title"
    >
      Доставка автомобилей в регионы
    </div>
    <div
      className="DeliverySettings__text"
    >
      Объявление будет отображаться в
       
      поисковой выдаче на
       
      auto.ru в
       
      выбранном городе. За
       
      каждую точку доставки дополнительно будет списываться сумма за
       
      размещение и
       
      подключенные услуги согласно 
      <Link
        url="https://auto.ru/dealer/#cost"
      >
        тарифам
      </Link>
       данного региона.
    </div>
    <DeliverySettingsSuggest
      className="DeliverySettings__geo"
      defaultSuggestIndex={0}
      hasInitialFocus={true}
      initialValue=""
      onFocusChange={[Function]}
      onSelect={[Function]}
      placeholder="Введите город и адрес"
      suggestsTheme="default"
      width="full"
    />
    <DeliverySettingsConfirm
      onClick={[Function]}
      onRequestHide={[Function]}
    />
  </div>
</Modal>
`;

exports[`должен вернуть корректный компонент, если есть isShowingLoader 1`] = `
<Modal
  animation={true}
  className="DeliverySettings__modal"
  closer={true}
  contentBodyClassName="DeliverySettings__contentBody"
  contentClassName="DeliverySettings__content"
  contentRelativeClassName="DeliverySettings__contentRelative"
  contentWrapperClassName="DeliverySettings__contentWrapper"
  onRequestHide={[Function]}
  visible={false}
  zIndexGroupLevel={20}
>
  <div
    className="DeliverySettings__placeholder"
  >
    <Spinner
      className="DeliverySettings__spinner"
      color="red"
    />
  </div>
  <div
    className="DeliverySettings DeliverySettings_loading"
  >
    <div
      className="DeliverySettings__image"
    >
      <img
        alt="Доставка"
        src={
          Object {
            "default": "picture-of-cat",
          }
        }
      />
    </div>
    <div
      className="DeliverySettings__title"
    >
      Доставка автомобилей в регионы
    </div>
    <div
      className="DeliverySettings__text"
    >
      Объявление будет отображаться в
       
      поисковой выдаче на
       
      auto.ru в
       
      выбранном городе. За
       
      каждую точку доставки дополнительно будет списываться сумма за
       
      размещение и
       
      подключенные услуги согласно 
      <Link
        url="https://auto.ru/dealer/#cost"
      >
        тарифам
      </Link>
       данного региона.
    </div>
    <DeliverySettingsSuggest
      className="DeliverySettings__geo"
      defaultSuggestIndex={0}
      hasInitialFocus={true}
      initialValue=""
      onFocusChange={[Function]}
      onSelect={[Function]}
      placeholder="введите город"
      suggestsTheme="default"
      width="full"
    />
    <DeliverySettingsConfirm
      onClick={[Function]}
      onRequestHide={[Function]}
    />
  </div>
</Modal>
`;

exports[`должен вернуть корректный компонент, если есть regions 1`] = `
<Modal
  animation={true}
  className="DeliverySettings__modal DeliverySettings__modal_hasRegions"
  closer={true}
  contentBodyClassName="DeliverySettings__contentBody"
  contentClassName="DeliverySettings__content"
  contentRelativeClassName="DeliverySettings__contentRelative"
  contentWrapperClassName="DeliverySettings__contentWrapper"
  onRequestHide={[Function]}
  visible={false}
  zIndexGroupLevel={20}
>
  <div
    className="DeliverySettings"
  >
    <div
      className="DeliverySettings__title"
    >
      Доставка автомобилей в регионы
    </div>
    <div
      className="DeliverySettings__text"
    >
      Объявление будет отображаться в
       
      поисковой выдаче на
       
      auto.ru в
       
      выбранном городе. За
       
      каждую точку доставки дополнительно будет списываться сумма за
       
      размещение и
       
      подключенные услуги согласно 
      <Link
        url="https://auto.ru/dealer/#cost"
      >
        тарифам
      </Link>
       данного региона.
    </div>
    <DeliverySettingsSuggest
      className="DeliverySettings__geo"
      defaultSuggestIndex={0}
      hasInitialFocus={true}
      initialValue=""
      onFocusChange={[Function]}
      onSelect={[Function]}
      placeholder="введите город"
      suggestsTheme="default"
      width="full"
    />
    <DeliverySettingsRegions
      deleteRegion={[Function]}
      priceTexts={
        Object {
          "price": "text",
        }
      }
      regions={
        Array [
          1,
          2,
          3,
        ]
      }
      restoreRegion={[Function]}
    />
    <div
      className="DeliverySettings__buttons"
    >
      <div
        className="DeliverySettings__button"
      >
        <Button
          color="blue"
          onClick={[Function]}
          size="l"
          type="button"
          width="full"
        >
          Сохранить
        </Button>
      </div>
      <div
        className="DeliverySettings__button"
      >
        <Button
          color="white"
          onClick={[Function]}
          size="l"
          type="button"
          width="full"
        >
          Удалить все города
        </Button>
      </div>
    </div>
    <DeliverySettingsConfirm
      onClick={[Function]}
      onRequestHide={[Function]}
    />
  </div>
</Modal>
`;
